# django-file-inbox

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/workflows/: code_quality.yml  pipeline.yml
src/django_file_inbox/: urls.py
src/django_file_inbox/templates/django_file_inbox/: inbox_template.html
src/django_file_inbox/templates/django_file_inbox/processed/: inbox.html
